# Dread-Locker

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
C2/: TODO.md  about.html  app.js  flag.txt  index.html  index.php  serv.py  upload.html  upload.php  uploadToC2.php
C2/php/: find_company.php  upload.php  upload_data_654165.php
C2/uploads/: README.md
C2/uploads/approved/bonanza_telecoms/: Employees_Ids.txt
C2/uploads/under_review/: leak1.txt
Forensic/: commands.md
Ransomware/: Cargo.toml
Ransomware/src/: encryption_functions.rs  exfiltration_functions.rs  infograb_functions.rs  main.rs  settings.rs
src/: encryption_functions.rs  exfiltration_functions.rs  info_grab.rs  infograb_functions.rs  main.rs  settings.rs  tests.rs
test_dir/: file01.txt
test_dir.bak/: file02.txt
test_dir/dir01/: filedir.txt
