[package]
name = "dread_locker"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
file = "1.1.2"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11.12", features = ["blocking", "multipart"]}
rand = "0.8.5"

[features] 
default = ["linux"]
linux = []
windows = []
